--- a/Layouts/layout_exercise_01.html
+++ b/Layouts/layout_exercise_01.html
@@ -210,6 +210,7 @@
                 display: flex;
                 flex-direction: column;
                 gap: 30px;
+                align-items: center;
             }
 
             div.wrapper div.heading {
