--- a/Layouts/layout_exercise_01.html
+++ b/Layouts/layout_exercise_01.html
@@ -42,6 +42,12 @@
 
                 <div class="card">
                     <img src="https://placecats.com/300/200" alt="">
+                    <span>How to join us</span>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla hic fugit velit quae! Neque temporibus explicabo illo aperiam iusto itaque nemo quis eum dolor sed, inventore, blanditiis assumenda ea cumque?</p>
+                </div>
+
+                <div class="card">
+                    <img src="https://placecats.com/300/200" alt="">
                     <span>The advantages</span>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla hic fugit velit quae! Neque temporibus explicabo illo aperiam iusto itaque nemo quis eum dolor sed, inventore, blanditiis assumenda ea cumque?</p>
                 </div>
