--- a/Layouts/layout_exercise_01.html
+++ b/Layouts/layout_exercise_01.html
@@ -258,6 +258,7 @@
                 display: flex;
                 gap: 30px;
                 overflow-x: scroll;
+                width: 100%;
             }
 
             div.wrapper div.cards div.card {
@@ -312,6 +313,7 @@
             div.wrapper div.teammates-experience {
                 display: flex;
                 gap: 30px;
+                width: 100%;
                 overflow-x: scroll;
             }
 
