--- a/Layouts/layout_exercise_01.html
+++ b/Layouts/layout_exercise_01.html
@@ -133,6 +133,17 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, illum voluptas facere modi aliquam recusandae rem non, ea dolorum voluptatum, cumque suscipit minus dicta velit corporis eum? Harum, non facere.
                     </div>
                 </div>
+
+                <div class="card">
+                    <div class="teammate">
+                        <img src="https://placecats.com/30/30" alt="">
+                        <span>Kevin D. Kim</span>
+                        <img width="20" height="20" src="https://pnghunter.com/get-logo.php?id=12586" alt="">
+                    </div>
+                    <div class="comment">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, illum voluptas facere modi aliquam recusandae rem non, ea dolorum voluptatum, cumque suscipit minus dicta velit corporis eum? Harum, non facere.
+                    </div>
+                </div>
             </div>
         </div>
 
