--- a/Layouts/layout_exercise_01.html
+++ b/Layouts/layout_exercise_01.html
@@ -407,6 +407,20 @@
             }
 
             @media screen and (max-width: 750px) {
+                nav.navigator div.links {
+                    display: flex;
+                    align-items: center;
+                    gap: 5px;
+                }
+
+                nav.navigator div.brand a {
+                    font-size: 18px;
+                }
+
+                div.wrapper {
+                    padding: 20px;
+                }
+
                 div.wrapper div.heading div.picture img {
                     width: 100%;
                     height: auto;
