--- a/Layouts/layout_exercise_01.html
+++ b/Layouts/layout_exercise_01.html
@@ -9,7 +9,7 @@
         <nav class="navigator">
             <div class="brand">
                 <a href="">
-                    <img src="https://placecats.com/30/30" alt="The cat logo">
+                    <img src="https://placecats.com/30/30" alt="A cat logo">
                     <span>My company</span>
                 </a>
             </div>
@@ -22,7 +22,7 @@
         <div class="wrapper">
             <div class="heading">
                 <div class="picture">
-                    <img src="https://placecats.com/500/300" alt="">
+                    <img src="https://placecats.com/500/300" alt="A cat image">
                 </div>
                 <div class="content">
                     <h2>Our company</h2>
@@ -35,31 +35,31 @@
 
             <div class="cards">
                 <div class="card">
-                    <img src="https://placecats.com/300/200" alt="">
+                    <img src="https://placecats.com/300/200" alt="A cat image">
                     <span>Why should you choose us</span>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla hic fugit velit quae! Neque temporibus explicabo illo aperiam iusto itaque nemo quis eum dolor sed, inventore, blanditiis assumenda ea cumque?</p>
                 </div>
 
                 <div class="card">
-                    <img src="https://placecats.com/300/200" alt="">
+                    <img src="https://placecats.com/300/200" alt="A cat image">
                     <span>How to join us</span>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla hic fugit velit quae! Neque temporibus explicabo illo aperiam iusto itaque nemo quis eum dolor sed, inventore, blanditiis assumenda ea cumque?</p>
                 </div>
 
                 <div class="card">
-                    <img src="https://placecats.com/300/200" alt="">
+                    <img src="https://placecats.com/300/200" alt="A cat image">
                     <span>The advantages</span>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla hic fugit velit quae! Neque temporibus explicabo illo aperiam iusto itaque nemo quis eum dolor sed, inventore, blanditiis assumenda ea cumque?</p>
                 </div>
 
                 <div class="card">
-                    <img src="https://placecats.com/300/200" alt="">
+                    <img src="https://placecats.com/300/200" alt="A cat image">
                     <span>The importance</span>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla hic fugit velit quae! Neque temporibus explicabo illo aperiam iusto itaque nemo quis eum dolor sed, inventore, blanditiis assumenda ea cumque?</p>
                 </div>
 
                 <div class="card">
-                    <img src="https://placecats.com/300/200" alt="">
+                    <img src="https://placecats.com/300/200" alt="A cat image">
                     <span>The event</span>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla hic fugit velit quae! Neque temporibus explicabo illo aperiam iusto itaque nemo quis eum dolor sed, inventore, blanditiis assumenda ea cumque?</p>
                 </div>
@@ -67,7 +67,7 @@
 
             <div class="introduction">
                 <div class="picture">
-                    <img src="https://placecats.com/300/200" alt="">
+                    <img src="https://placecats.com/300/200" alt="A cat image">
                 </div>
                 <div class="content">
                     <h2>Introduction</h2>
@@ -83,7 +83,7 @@
                     Esse voluptatibus perferendis voluptatem ad et rerum debitis eum unde consectetur illum nisi maiores ex est facilis velit distinctio itaque, aspernatur corrupti inventore placeat iste harum dolorum modi. Obcaecati, fugit.</p>
                 </div>
                 <div class="picture">
-                    <img src="https://placecats.com/300/200" alt="">
+                    <img src="https://placecats.com/300/200" alt="A cat image">
                 </div>
             </div>
 
@@ -92,9 +92,9 @@
             <div class="teammates-experience">
                 <div class="card">
                     <div class="teammate">
-                        <img src="https://placecats.com/30/30" alt="">
+                        <img src="https://placecats.com/30/30" alt="A cat image">
                         <span>Lori J. Shaw</span>
-                        <img width="20" height="20" src="https://pnghunter.com/get-logo.php?id=12586" alt="">
+                        <img width="20" height="20" src="https://pnghunter.com/get-logo.php?id=12586" alt="A star shape">
                     </div>
                     <div class="comment">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, illum voluptas facere modi aliquam recusandae rem non, ea dolorum voluptatum, cumque suscipit minus dicta velit corporis eum? Harum, non facere.
@@ -103,9 +103,9 @@
 
                 <div class="card">
                     <div class="teammate">
-                        <img src="https://placecats.com/30/30" alt="">
+                        <img src="https://placecats.com/30/30" alt="A cat image">
                         <span>Clara J. Kato</span>
-                        <img width="20" height="20" src="https://pnghunter.com/get-logo.php?id=12586" alt="">
+                        <img width="20" height="20" src="https://pnghunter.com/get-logo.php?id=12586" alt="A star shape">
                     </div>
                     <div class="comment">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, illum voluptas facere modi aliquam recusandae rem non, ea dolorum voluptatum, cumque suscipit minus dicta velit corporis eum? Harum, non facere.
@@ -114,9 +114,9 @@
 
                 <div class="card">
                     <div class="teammate">
-                        <img src="https://placecats.com/30/30" alt="">
+                        <img src="https://placecats.com/30/30" alt="A cat image">
                         <span>Todd L. Lewis</span>
-                        <img width="20" height="20" src="https://pnghunter.com/get-logo.php?id=12586" alt="">
+                        <img width="20" height="20" src="https://pnghunter.com/get-logo.php?id=12586" alt="A star shape">
                     </div>
                     <div class="comment">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, illum voluptas facere modi aliquam recusandae rem non, ea dolorum voluptatum, cumque suscipit minus dicta velit corporis eum? Harum, non facere.
@@ -125,9 +125,9 @@
 
                 <div class="card">
                     <div class="teammate">
-                        <img src="https://placecats.com/30/30" alt="">
+                        <img src="https://placecats.com/30/30" alt="A cat image">
                         <span>Karen R. Baxter</span>
-                        <img width="20" height="20" src="https://pnghunter.com/get-logo.php?id=12586" alt="">
+                        <img width="20" height="20" src="https://pnghunter.com/get-logo.php?id=12586" alt="A star shape">
                     </div>
                     <div class="comment">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, illum voluptas facere modi aliquam recusandae rem non, ea dolorum voluptatum, cumque suscipit minus dicta velit corporis eum? Harum, non facere.
@@ -136,9 +136,9 @@
 
                 <div class="card">
                     <div class="teammate">
-                        <img src="https://placecats.com/30/30" alt="">
+                        <img src="https://placecats.com/30/30" alt="A cat image">
                         <span>Kevin D. Kim</span>
-                        <img width="20" height="20" src="https://pnghunter.com/get-logo.php?id=12586" alt="">
+                        <img width="20" height="20" src="https://pnghunter.com/get-logo.php?id=12586" alt="A star shape">
                     </div>
                     <div class="comment">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, illum voluptas facere modi aliquam recusandae rem non, ea dolorum voluptatum, cumque suscipit minus dicta velit corporis eum? Harum, non facere.
